wx-core/include/generated/ffi_l.h

// CLASS: wxListItem
wxClassInfo *wxListItem_CLASSINFO();
wxListItem *wxListItem_new();
void wxListItem_Clear(wxListItem * self);
wxColour *wxListItem_GetBackgroundColour(const wxListItem * self);
int wxListItem_GetColumn(const wxListItem * self);
wxFont *wxListItem_GetFont(const wxListItem * self);
long wxListItem_GetId(const wxListItem * self);
int wxListItem_GetImage(const wxListItem * self);
long wxListItem_GetMask(const wxListItem * self);
long wxListItem_GetState(const wxListItem * self);
wxString *wxListItem_GetText(const wxListItem * self);
wxColour *wxListItem_GetTextColour(const wxListItem * self);
int wxListItem_GetWidth(const wxListItem * self);
void wxListItem_SetBackgroundColour(wxListItem * self, const wxColour * col_back);
void wxListItem_SetColumn(wxListItem * self, int col);
void wxListItem_SetData(wxListItem * self, long data);
void wxListItem_SetData1(wxListItem * self, void * data);
void wxListItem_SetFont(wxListItem * self, const wxFont * font);
void wxListItem_SetId(wxListItem * self, long id);
void wxListItem_SetImage(wxListItem * self, int image);
void wxListItem_SetMask(wxListItem * self, long mask);
void wxListItem_SetState(wxListItem * self, long state);
void wxListItem_SetStateMask(wxListItem * self, long state_mask);
void wxListItem_SetText(wxListItem * self, const wxString * text);
void wxListItem_SetTextColour(wxListItem * self, const wxColour * col_text);
void wxListItem_SetWidth(wxListItem * self, int width);
// CLASS: wxListView
wxClassInfo *wxListView_CLASSINFO();
wxListView *wxListView_new();
wxListView *wxListView_new1(wxWindow * parent, wxWindowID winid, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxListView_ClearColumnImage(wxListView * self, int col);
void wxListView_Focus(wxListView * self, long index);
long wxListView_GetFirstSelected(const wxListView * self);
long wxListView_GetFocusedItem(const wxListView * self);
long wxListView_GetNextSelected(const wxListView * self, long item);
bool wxListView_IsSelected(const wxListView * self, long index);
void wxListView_Select(wxListView * self, long n, bool on);
void wxListView_SetColumnImage(wxListView * self, int col, int image);
// CLASS: wxListbook
wxClassInfo *wxListbook_CLASSINFO();
wxListbook *wxListbook_new();
wxListbook *wxListbook_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxListbook_Create(wxListbook * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
wxListView * wxListbook_GetListView(const wxListbook * self);