wx-core/src/generated/ffi_l.rs


    // wxListItem
    pub fn wxListItem_CLASSINFO() -> *mut c_void;
    pub fn wxListItem_new() -> *mut c_void;
    pub fn wxListItem_Clear(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxListItem_GetAlign(self_: *const c_void) -> wxListColumnFormat;
    pub fn wxListItem_GetBackgroundColour(self_: *const c_void) -> *mut c_void;
    pub fn wxListItem_GetColumn(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxListItem_GetData(self_: *const c_void) -> wxUIntPtr;
    pub fn wxListItem_GetFont(self_: *const c_void) -> *mut c_void;
    pub fn wxListItem_GetId(self_: *const c_void) -> c_long;
    pub fn wxListItem_GetImage(self_: *const c_void) -> c_int;
    pub fn wxListItem_GetMask(self_: *const c_void) -> c_long;
    pub fn wxListItem_GetState(self_: *const c_void) -> c_long;
    pub fn wxListItem_GetText(self_: *const c_void) -> *mut c_void;
    pub fn wxListItem_GetTextColour(self_: *const c_void) -> *mut c_void;
    pub fn wxListItem_GetWidth(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxListItem_SetAlign(self_: *mut c_void, align: wxListColumnFormat);
    pub fn wxListItem_SetBackgroundColour(self_: *mut c_void, col_back: *const c_void);
    pub fn wxListItem_SetColumn(self_: *mut c_void, col: c_int);
    pub fn wxListItem_SetData(self_: *mut c_void, data: c_long);
    pub fn wxListItem_SetData1(self_: *mut c_void, data: *mut c_void);
    pub fn wxListItem_SetFont(self_: *mut c_void, font: *const c_void);
    pub fn wxListItem_SetId(self_: *mut c_void, id: c_long);
    pub fn wxListItem_SetImage(self_: *mut c_void, image: c_int);
    pub fn wxListItem_SetMask(self_: *mut c_void, mask: c_long);
    pub fn wxListItem_SetState(self_: *mut c_void, state: c_long);
    pub fn wxListItem_SetStateMask(self_: *mut c_void, state_mask: c_long);
    pub fn wxListItem_SetText(self_: *mut c_void, text: *const c_void);
    pub fn wxListItem_SetTextColour(self_: *mut c_void, col_text: *const c_void);
    pub fn wxListItem_SetWidth(self_: *mut c_void, width: c_int);

    // wxListView
    pub fn wxListView_CLASSINFO() -> *mut c_void;
    pub fn wxListView_new() -> *mut c_void;
    pub fn wxListView_new1(
        parent: *mut c_void,
        winid: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxListView_~wxListView(self_: *mut c_void);
    pub fn wxListView_ClearColumnImage(self_: *mut c_void, col: c_int);
    pub fn wxListView_Focus(self_: *mut c_void, index: c_long);
    pub fn wxListView_GetFirstSelected(self_: *const c_void) -> c_long;
    pub fn wxListView_GetFocusedItem(self_: *const c_void) -> c_long;
    pub fn wxListView_GetNextSelected(self_: *const c_void, item: c_long) -> c_long;
    pub fn wxListView_IsSelected(self_: *const c_void, index: c_long) -> bool;
    pub fn wxListView_Select(self_: *mut c_void, n: c_long, on: bool);
    pub fn wxListView_SetColumnImage(self_: *mut c_void, col: c_int, image: c_int);

    // wxListbook
    pub fn wxListbook_CLASSINFO() -> *mut c_void;
    pub fn wxListbook_new() -> *mut c_void;
    pub fn wxListbook_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxListbook_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxListbook_GetListView(self_: *const c_void) -> *mut c_void;

}
